--- a/styles/main.css
+++ b/styles/main.css
@@ -19,9 +19,19 @@ img {
 .letter-g {
   color: var(--primary-color);
 }
+.txt-color{
+    color: #534C64;
+    font-weight: 400;
+    font-size: 1rem;
+}
+.btn{
+    padding: 12px 20px;
+    border-radius: 20px;
+    border: none;
+}
 /* navbar */
 nav {
-  padding: 20px 100px;
+  padding: 10px 100px;
   align-items: center;
   justify-content: space-between;
   display: flex;
@@ -51,21 +61,79 @@ nav ul li {
 nav ul li a,
 nav ul li p {
   color: #3c354f;
-  font-size: 1rem;
+  font-size: 0.9rem;
   font-weight: 500;
   text-decoration: none;
 }
 .follow-us {
-    align-items: center;
-  padding: 12px 18px;
+  align-items: center;
+  padding: 8px 18px;
   border-radius: 8px;
   background: rgba(11, 2, 35, 0.1);
   display: flex;
   gap: 18px;
 }
-.follow-us i{
-    font-size: 2rem;
+.follow-us i {
+  font-size: 2rem;
 }
-.fa-youtube{
-    color: red;
+.fa-youtube {
+  color: red;
+}
+/* banner section */
+.banner-container {
+    width: 100%;
+  height: 100vh;
+  display: flex;
+  /* padding: 40px 100px 0px 100px; */
+  align-items: center;
+  justify-content: space-between;
+}
+.banner-content-bg{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    width: 50%;
+    height: 100vh;
+    background: url('/images/group_14.png') no-repeat;
+    background-size: 100% 100%;
+}
+.banner-content{
+    margin-left: 100px;
+}
+.banner-content h1 {
+  font-weight: 600;
+  color: #0b0223;
+  font-size: 2rem;
+  margin-bottom: 15px;
+}
+.banner-container .goat {
+  font-size: 4rem;
+  line-height: 4rem;
+  font-weight: 800;
+  background: var(--color-gradient);
+  background-clip: text;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+
+}
+.banner-container p{
+    font-size: 0.8rem;
+}
+.banner-container img {
+    margin-right: 100px;
+  width: 50%;
+}
+.banner-content-buttons{
+    display: flex;
+    align-items: center;
+    gap: 20px;
+    margin-top: 20px;
+}
+.btn-sign-in{
+   color: white;
+   background-color: var(--primary-color);
+}
+.btn-go-rogue{
+    background-color: #4EC5F7;
+    color: white;
 }
