--- a/styles/responsive.css
+++ b/styles/responsive.css
@@ -32,6 +32,14 @@
     .btn{
         font-size: 0.7rem;
     }
+    .gamer-container{
+        padding: 20px;
+        flex-direction: column;
+        text-align: center;
+    }
+    .gamer-container img{
+        width: 100%;
+    }
 }
 /* tablet devices */
 @media screen and (min-width: 425px) and (max-width: 768px){
@@ -43,5 +51,13 @@
     }
     .banner-container img{
         width: 40%;
+    }
+    .gamer-container{
+        padding: 40px;
+        flex-direction: column;
+        text-align: center;
+    }
+    .gamer-container img{
+        width: 100%;
     }
 }
