--- a/styles/main.css
+++ b/styles/main.css
@@ -16,6 +16,9 @@ body {
 img {
   width: 100%;
 }
+h1{
+    font-size: 2rem;
+}
 .letter-g {
   color: var(--primary-color);
 }
@@ -28,6 +31,14 @@ img {
     padding: 12px 20px;
     border-radius: 20px;
     border: none;
+}
+.gradient-header{
+    font-size: 2rem;
+    font-weight: 800;
+    background: var(--color-gradient);
+    background-clip: text;
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
 }
 /* navbar */
 nav {
@@ -150,14 +161,7 @@ nav ul li p {
     width: 60%;
     gap: 20px;
 }
-.gamer-content h1{
-    font-size: 2rem;
-    font-weight: 800;
-    background: var(--color-gradient);
-    background-clip: text;
-    -webkit-background-clip: text;
-    -webkit-text-fill-color: transparent;
-}
+
 .gamer-content p{
     font-size: 1rem;
     margin: 20px 0px;
@@ -167,4 +171,74 @@ nav ul li p {
 font-size: 1.2rem;
 font-style: normal;
 font-weight: 700;
+}
+
+
+/* funny videos */
+
+.funny-videos-container{
+    text-align: center;
+    padding: 100px;
+}
+.funny-videos-container h1{
+    margin-bottom: 10px;
+}
+.cards-container{
+    margin-top: 30px;
+    gap: 20px;
+    justify-content: space-between;
+    display: flex;
+}
+.card{
+    position: relative;
+    width: 100%;
+}
+.card img{
+    width: 100%;
+    height: 100%;
+    z-index: 6;
+}
+.card p{
+    margin-top: 5px;
+    text-align: left;
+}
+.card-content{
+  height: 100%;
+  width: 100%;
+  position: relative;
+}
+.overlay {
+    border-radius: 15px;
+    position: absolute;
+    z-index: 10;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: black;
+    opacity: 0;
+    margin-top: -5px;
+    margin-left: -5px;
+    border: 5px solid var(--primary-color);
+    transition: 0.2s ease-in-out;
+}
+.overlay i{
+    font-size: 32px;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    color: white;
+    transform: translate(-50%, -50%);
+}
+.watch-now{
+  color: var(--primary-color);
+  font-size: 700;
+  position: absolute;
+  top: 52%;
+  left: 50%;
+  transform: translate(-52%, 50%);
+}
+.card:hover .overlay{
+    cursor: pointer;
+    opacity: 0.7;
 }
