--- a/styles/responsive.css
+++ b/styles/responsive.css
@@ -62,6 +62,14 @@
         bottom: 90px;
         left: -70px;
     }
+    .career-container{
+        padding: 20px;
+        background-position: center bottom ;
+        height: 200vh;
+    }
+    .career-content{
+        width: 100%;
+    }
 }
 /* tablet devices */
 @media screen and (min-width: 425px) and (max-width: 768px){
@@ -103,5 +111,13 @@
     .play-instant-img-content .img-bottom{
         bottom: 90px;
         left: -70px;
+    }
+    .career-container{
+        padding: 20px;
+        background-position: center bottom ;
+        height: 200vh;
+    }
+    .career-content{
+        width: 100%;
     }
 }
