--- a/styles/main.css
+++ b/styles/main.css
@@ -278,7 +278,7 @@ nav ul li p {
 .career-container {
   padding: 100px;
   background-color: var(--primary-color);
-  background-image: url('/images/group_65.png');
+  background-image: url('images/group_65.png');
   background-repeat: no-repeat;
   background-position: top right;
   background-size: contain;
